--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -13,6 +13,8 @@ resources:
 # default, aiding admins in cluster management. Those roles are
 # not used by the Project itself. You can comment the following lines
 # if you do not want those helpers be installed with your Project.
+- application_editor_role.yaml
+- application_viewer_role.yaml
 - workload_editor_role.yaml
 - workload_viewer_role.yaml
 
