--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - poly_v1_workload.yaml
+- poly_v2_application.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
