--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,8 +2,7 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/poly.poly_workloads.yaml
-- bases/poly.poly_applications.yaml
+- bases/poly.opchens_workloads.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -14,7 +13,6 @@ patches:
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- path: patches/cainjection_in_workloads.yaml
-#- path: patches/cainjection_in_applications.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
